<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.operaciones.Principal">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtNumerouno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/primer_numero"
            android:inputType="number|numberSigned|numberDecimal" />

        <EditText
            android:id="@+id/txtNumerodos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/segundo_numero"
            android:inputType="number|numberSigned|numberDecimal" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Operaciones"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/cmbOperaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Resultado"
            android:textAlignment="viewStart"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/lblResultado"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textAlignment="center"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="calcular"
                android:text="@string/calcular" />

            <Button
                android:id="@+id/button2"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="borrar"
                android:text="@string/borrar" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
